[package]
name = "dino-cave"
version = "0.1.0"
authors = ["Florian Merz <fmerz@mozilla.com>"]

[dependencies]
serde = "1.0.79"
serde_json = "1.0.28"
base64 = "0.9.3"
serde_derive = "1.0.79"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"
json-patch = "*"
lazy_static = "1.1"
maud = { version = "0.18.1", features = ["rocket"] }